<resources>
    <string name="app_name">DoctorCare</string>
    <string name="description_logo">find doctors easily</string>
    <string name="welcome">Welcome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">login</string>
    <string name="Forgetpassword">Forget your password ?</string>
    <string name="createaccount">Create a new account</string>
    <string name="introduce1">Be healthy </string>
    <string name="introduce2">&amp; Find a consultant</string>
    <string name="introduce3">Providing care, changing a life</string>
    <string name="introduce4">Ready to help you anytime you want</string>
    <string name="getstarted">Get Started >></string>
    <string name="hello">Hello</string>
</resources>