<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
        <variable
            name="LoginViewModel"
            type="com.example.doccare.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/img_background_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_background"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/login_header_background"
            app:layout_constraintBottom_toBottomOf="@id/img_background_login"
            app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_logo"
                android:textColor="@color/white"
                ></TextView>
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@id/img_background_login"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/welcome_login_background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_email_24"/>
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="@={LoginViewModel.username}"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_lock_24"/>
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={LoginViewModel.password}"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/messagelogin"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textColor="@{LoginViewModel.issuccess ? @color/blue : @color/red}"
                android:visibility="@{LoginViewModel.isShowmessage ? View.VISIBLE : View.GONE}"
                android:text="@{LoginViewModel.messageLogin}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/Login"
                android:onClick="@{()->LoginViewModel.onClickLogin()}"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_forgetpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Forgetpassword"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="italic"
                />
            <Button
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/createaccount_button"
                android:text="@string/createaccount"
                android:textColor="@color/crystal80_blue"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>